tests/init_state/ref_obligations/drop_ref_unmoved_leaks.err.expected
error: at 3:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=true, ends_init=false)
   |
 3 |     return
   |     ^^^^^^
