tests/init_state/ref_obligations/drop_ref_unmoved_leaks.sim
fn f(r: &drop i64) {
  entry:
    return
}
